content multi spacing and fix

--- a/_html/src/sass/modules/_button.scss
+++ b/_html/src/sass/modules/_button.scss
@@ -91,3 +91,8 @@ a.button__secondary__outline {
         background-color: lighten($color-black, 85%);
     }
 }
+
+.button__link {
+    font-size: rem(14);
+    line-height: rem(26);
+}
