--- a/_html/src/sass/modules/_content-card.scss
+++ b/_html/src/sass/modules/_content-card.scss
@@ -14,8 +14,9 @@ $content-card-item-height: 203;
 }
 
 .content__card__hl__link {
+    @extend .button__link;
     float: right;
-    margin-top: rem(10);
+    margin-top: rem(5);
 }
 
 .content__card__item {
@@ -43,10 +44,10 @@ $content-card-item-height: 203;
     bottom: 0;
     left: 0;
     color: $color-light-grey;
-    padding: rem(20);
+    padding: rem(18) rem(20);
 
     .content__card__item--large & {
-        padding: rem(30);
+        padding: rem(27) rem(30);
     }
 }
 
@@ -73,31 +74,13 @@ $content-card-item-height: 203;
     &:after {
         content: "";
         display: block;
-        background: linear-gradient(rgba($color-black, 0.1), rgba($color-black, 0.9));
+        background: $color-black;
+        background: linear-gradient(180deg, rgba($color-black,0) 0%, rgba($color-black,0) 50%, rgba($color-black,1) 100%);
         width: 100%;
         height: 100%;
         position: absolute;
         left: 0;
         top: 0;
     }
-}
-
-.content__multi__col {
-    padding-top: rem(45);
-}
-
-.content__multi__col__header__hl {
-    color: $color-primary;
-}
-
-.content__multi__col__header__text {
-    padding-bottom: rem(45);
-}
-
-.content__multi__col__body__detail__text {
-    padding-bottom: rem(25);
-    min-height: rem(130);
-
-    @extend .text__secondary;
 }
 
